# desafio-banco-DIO

./: README.md  clientes.json  clientes.jsonl  contas.json  contas.jsonl  log.txt  operacoes_banco.py  pyproject.toml
