[project]
name = "desafio-banco"
version = "0.1.0"
description = ""
authors = [
    {name = "Bernardo Silva (bernardojdrs@gmail.com)"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.4,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "operacoes_banco" }

]
